ros2_ws/log/build_2025-04-20_16-38-15/catRobot/stderr.log
  File "/home/cat/robot/cat-stalker/ros2_ws/install/catRobot/lib/python3.12/site-packages/catRobot/catDetection.py", line 11
    from cat-stalker.msg import CatFound
            ^
SyntaxError: invalid syntax

